        removed cwd "./" (refer to Bugzilla 14399).

Severity   : normal
Bugzilla   : 13139
Description: Remove portals compatibility
Details    : Remove portals compatibility, not interoperable with releases
	     before 1.4.6

Severity   : normal
Bugzilla   : 15576
Description: Resolve device initialization race
Details    : Prevent proc handler from accessing devices added to the
             obd_devs array but yet be intialized.

Severity   : enhancement
Bugzilla   : 15308
Description: Update to SLES10 SP2 kernel-2.6.16.60-0.23.

Severity   : enhancement
Bugzilla   : 16190
Description: Update to RHEL5 kernel-2.6.18-92.1.6.el5.

Severity   : normal
Bugzilla   : 12975
Frequency  : rare
Description: Using wrong pointer in osc_brw_prep_request
Details    : Access to array[-1] can produce panic if kernel compiled with
	     CONFIG_PAGE_ALLOC enabled

Severity   : normal
Bugzilla   : 16037
Description: Client runs out of low memory
Details    : Consider only lowmem when counting initial number of llap pages

Severity   : normal
Bugzilla   : 15625
Description: *optional* service tags registration
Details    : if the "service tags" package is installed on a Lustre node
	     When the filesystem is mounted, a local-node service tag will
	     be created.  See http://inventory.sun.com/ for more information
	     about the Service Tags asset management system.

Severity   : normal
Bugzilla   : 15825
Description: Kernel BUG tries to release flock
Details    : Lustre does not destroy flock lock before last reference goes
	     away. So always drop flock locks when client is evicted and 
	     perform unlock regardless of successfulness of speaking to MDS.

Severity   : normal
Bugzilla   : 15210
Description: add recount protection for osc callbacks, so avoid panic on shutdown

Severity   : normal
Bugzilla   : 12653
Description: sanity test 65a fails if stripecount of -1 is set
Details    : handle -1 striping on filesystem in ll_dirstripe_verify

Severity   : normal